--- a/Veeresh.html
+++ b/Veeresh.html
@@ -16,10 +16,10 @@
 <body class="bg-gradient-to-r from-blue-500 to-purple-600 min-h-screen flex items-center justify-center p-4">
     <div class="bg-white p-8 rounded-xl shadow-2xl text-center max-w-md w-full">
         <h1 class="text-5xl font-extrabold text-gray-900 mb-4 animate-fade-in-down">
-            Welcome to my page!
+            Welcome to Veeresh's Test Page!
         </h1>
         <p class="text-lg text-gray-700">
-            I'm glad to have you here. Explore and enjoy!
+            I'm glad to have you here!
         </p>
     </div>
 
